# tinycp

./: .gitattributes  .gitignore  README.md  cp.ipynb  mcp.ipynb  pyproject.toml
examples/: class_cond.ipynb  marginal.ipynb  oob_class_cond.ipynb  oob_marginal.ipynb
examples/classification/: class_cond.ipynb  marginal.ipynb  oob_class_cond.ipynb  oob_marginal.ipynb  sentimental_analysis.ipynb
examples/regression/: cqr.ipynb  icp.ipynb
tests/: test_classifiers.py
tinycp/binary/: __init.py  base.py  class_cond.py  cp.py  marginal.py  mcp.py
tinycp/classifier/: base.py  class_conditional.py  marginal.py
tinycp/examples/: class_cond.ipynb
