[tool.poetry]
name = "tinycp"
version = "0.1.0"
description = "A small toolbox for conformal prediction"
license = "MIT"
authors = ["Lucas Leão <heylucasleao@gmail.com>"]
keywords = ["machine-learning", "conformal-prediction"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.22.0"
venn-abers = "^1.4.2"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
